# Zephyr_Test

./: .clangd  .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
.claude/: session-2026-05-15.md  session-2026-05-16.md  settings.json
.claude/session-data/: 2026-05-13-dm-motor-session.tmp  2026-05-14-dm-motor-session.tmp
algorithm/: CMakeLists.txt  Kconfig
algorithm/controller/pid/: pid.cpp  pid.hpp
algorithm/controller/power_ctrl/: README.md  power_ctrl.cpp  power_ctrl.hpp
algorithm/filter/lpf/: lpf.hpp
algorithm/identify/rls/: README.md  rls.cpp  rls.hpp
algorithm/tflm/: CMakeLists.txt  Kconfig  tflm.cpp  tflm.hpp
algorithm/tflm/models/mysin/: mysin_model_data.cc  mysin_model_data.h
algorithm/tflm/port/: debug_log.cc
algorithm/tflm/tensorflow/lite/: tensorflow_profiler_logger.h
algorithm/tflm/tensorflow/lite/kernels/: TargetConditionals.h
cmd/shell/: CMakeLists.txt  Kconfig  dbg_cmd.cpp  debug.hpp  pid_cmd.cpp
doc/: PATTERN_12_RC_ARCH.md  PID与功率控制协同详解.md  REMOTE_ARCH.md  can_baudrate_bug_analysis.md  chip_porting_guide.md  claude_fuckups.md  dm_todo.md  env_changes.md  my_lessons.md  nn_chassis_control_plan.md  nn_control_howto.md  nn_replaces_pid_deep_dive.md  remote_frame_sync_issue.md  sdk_glue_driver_changes.md  session_state.md  todo.md  zephyr_4.4_issues.md  代码规范.md  功率控制采样逻辑计算流程详解.md  底盘控制管线.md  底盘运动学解算说明.md  整改记录.md  框架概述.md  波特率问题分析.md  电机功率控制算法.md  给ai上的第一课.md  舵轮逻辑控制算法.md
drivers/: CMakeLists.txt  Kconfig
drivers/communication/can/: can.hpp
drivers/communication/uart/: uart.cpp  uart.hpp
drivers/device/gpio/: input.hpp  output.hpp
include/: cmsis_core.h
modules/: CMakeLists.txt  Kconfig
modules/motor/dji/: dji_c6xx.cpp  dji_c6xx.hpp
modules/motors/dji/: dji_c6xx.cpp  dji_c6xx.hpp
modules/motors/dm/: dm.cpp  dm.hpp
modules/powermeter/: powermeter.cpp  powermeter.hpp
modules/remotes/: ARCHITECTURE.md  protocol_base.hpp  remote.cpp  remote.hpp
modules/remotes/dr16/: dr16.cpp  dr16.hpp
modules/remotes/vt12/: vt12.cpp  vt12.hpp
modules/remotes/vt13/: vt13.cpp  vt13.hpp
projects/: CMakeLists.txt
projects/apps/: Init.cpp  Irq_handlers.cpp  System_startup.cpp  System_startup.h
projects/boards/: Kconfig.board_6e00  board.cmake  board.yml  board_6e00.yaml  board_6e00_defconfig  hpm6e00evk.overlay
projects/boards/hpm/hpm6e00evk/: board.cmake  hpm6e00evk.conf  hpm6e00evk.overlay
projects/boards/st/board_rm_c/: stm32f407igh6.conf  stm32f407igh6.overlay
projects/boards/st/puzhong/: board.cmake  openocd.cfg  stm32f4_disco.conf  stm32f4_disco.overlay
projects/thread/: CMakeLists.txt  Kconfig  thread.hpp
projects/thread/can/: trd_can_tx.cpp  trd_can_tx.hpp
projects/thread/chassis/: trd_chassis.cpp  trd_chassis.hpp
projects/thread/gimbal/: trd_gimbal.cpp  trd_gimbal.hpp
projects/thread/gpio/: trd_gpio.cpp  trd_gpio.hpp
projects/thread/tflm/: trd_tflm.cpp  trd_tflm.hpp
scripts/: train_chassis.py  train_chassis_rl.py
src/: main.c
topic/: CMakeLists.txt  Kconfig  motor_cmd.cpp  motor_cmd.hpp
topic/chassis_to_can/: chassis_to_can.cpp  chassis_to_can.hpp
topic/remote_to/: remote_to.cpp  remote_to.hpp
topic/to_can_tx/: to_can_tx.cpp  to_can_tx.hpp
